app/assets/stylesheets/application/todos.css.sass
// Place all the styles related to the todos controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.activity-items
  .activity-item-todo
    span.activate
    span.deactivate
      text-decoration: line-through

.sub-collection-todos
  h2
    small
      a
        font-size: 13px
        color: #aaa
  .content-item-todo.inactive
    p
      text-decoration: line-through

//
// Style appearance
//

.content-item-todo
  padding-top: 0
  padding-bottom: 10px
  border-left: 0!important
  border-right: 0!important
  .spacer
    display: none
  .move-handle
    padding: 0
    height: 20px
    margin-left: 16px!important
    margin-top: 2px
    i:before
      content: "\f0dc"
      color: #aaa
  .content-item-options
    width: 70px
    left: -40px
    margin-top: -8px
    ul.nav.nav-pills
      margin: 0
      padding-left: 3px
      display: inline-block
      background: white
      border-radius: 5px
      > li
        float: right
        a
          padding-right: 4px
          padding-left: 4px
          i.icon-trash
            opacity: 0.5
        &:hover i.icon-trash
          opacity: 1

//
// Alignment of checkbox and title
//
.content-item-todo,
form.todo-new
  .todo-checkbox
    float: left
    width: 20px
  .todo-title
    display: block
    float: left
    width: 88%
    padding-top: 2px
    p
      margin: 0

// Appearance in dashboard and sidebar
.dashboard,
.sidebar
  .content-todo-list
    .content-item-todo
      padding-top: 2px
      padding-bottom: 2px
      .spacer
        display: none
      .move-handle
        margin-left: -8px!important
      .todo-title

//
// Style forms
//

@mixin has-plain-content-item-form
  .content-item-form-wrapper,
  form
    padding: 0
    margin: 0
    background: transparent
    border: none
    box-shadow: none

@mixin has-plain-form-controls
  label
    display: none
  .control-group
    margin: 0!important
    .controls
      margin-left: 0
      input
        padding-left: 0
        padding-top: 0
        margin-left: -1px
        width: 99%!important

@mixin has-hidden-form-actions
  .form-actions
    display: none

@mixin has-plain-todo-form-controls
  @include has-plain-form-controls
  @include has-hidden-form-actions

div.content-item-wrapper[id^="todo_"]
  @include has-plain-content-item-form

form.todo
  @include has-plain-todo-form-controls

.content
  form.todo-edit
    padding-left: 40px!important

.sidebar
  form.todo
    padding-left: 10px!important

